--- a/hw3.html
+++ b/hw3.html
@@ -371,6 +371,7 @@ summary {
 
 <div id="problem-1" class="section level2">
 <h2>Problem 1:</h2>
+<p>Regex finds instances of two or more spaces, but not line breaks.</p>
 <div id="find" class="section level4">
 <h4>Find:</h4>
 <pre><code>\s{2,}
@@ -383,6 +384,7 @@ summary {
 </div>
 <div id="problem-2" class="section level2">
 <h2>Problem 2:</h2>
+<p>Regex captures first name, last name, and all the rest. Order of names reversed and all the rest is put in parentheses.</p>
 <div id="find-1" class="section level4">
 <h4>Find:</h4>
 <pre><code>(\w+), (\w+), (.*)</code></pre>
@@ -394,9 +396,10 @@ summary {
 </div>
 <div id="problem-3" class="section level2">
 <h2>Problem 3:</h2>
+<p>Regex finds all instances of .mp3 followed by a space, captures .mp3, and replaces the space with a new line.</p>
 <div id="find-2" class="section level4">
 <h4>Find:</h4>
-<pre><code>.mp3(\s)</code></pre>
+<pre><code>(.mp3)\s</code></pre>
 </div>
 <div id="replace-2" class="section level4">
 <h4>Replace:</h4>
@@ -404,7 +407,8 @@ summary {
 </div>
 </div>
 <div id="problem-4" class="section level2">
-<h2>Problem 4</h2>
+<h2>Problem 4:</h2>
+<p>Regex captures numbers with 2 or more digits followed by a space, then captures everything before .mp3 as well as .mp3 so they can be replaced in a different order.</p>
 <div id="find-3" class="section level4">
 <h4>Find:</h4>
 <pre><code>(\d{2,}) (.*)(.mp3)</code></pre>
@@ -416,6 +420,7 @@ summary {
 </div>
 <div id="problem-5" class="section level2">
 <h2>Problem 5:</h2>
+<p>Regex captures the first letter of the first word, the whole second word, and the last number with any number of digits and eliminates everything else.</p>
 <div id="find-4" class="section level4">
 <h4>Find:</h4>
 <pre><code>(\w)\w+,(\w+),\d+.\d,(\d+)</code></pre>
@@ -427,6 +432,7 @@ summary {
 </div>
 <div id="problem-6" class="section level2">
 <h2>Problem 6:</h2>
+<p>Regex captures the first letter of the first word, the first four letters of the second word, and the final comma and number, then eliminates everything else.</p>
 <div id="find-5" class="section level4">
 <h4>Find:</h4>
 <pre><code>(\w{1})\w*,(\w{4})\w*,\d*.\d(,\d*)</code></pre>
@@ -438,6 +444,7 @@ summary {
 </div>
 <div id="problem-7" class="section level2">
 <h2>Problem 7:</h2>
+<p>Regex captures the first three letters of the first word, the first three letters of the second word, and the comma followed by everything else, then eliminates the leftovers.</p>
 <div id="find-6" class="section level4">
 <h4>Find:</h4>
 <pre><code>(\w{3})\w*,(\w{3})\w*(,.*)</code></pre>
