--- a/index.html
+++ b/index.html
@@ -378,8 +378,16 @@ summary {
 <p><a href="hw1.html">Wasp Narrative Flowchart</a></p>
 </div>
 <div id="homework-3-regular-expression-puzzles" class="section level3">
-<h3>Homework 3: regular expression puzzles</h3>
+<h3>Homework 3: Regular expression puzzles</h3>
 <p><a href="hw3.html">Regular expression puzzles</a></p>
+</div>
+<div id="homework-4-vectors-in-r" class="section level3">
+<h3>Homework 4: Vectors in R</h3>
+<p><a href="hw4.html">Vectors</a></p>
+</div>
+<div id="homework-5-matrices-lists-and-data-frames" class="section level3">
+<h3>Homework 5: Matrices, lists, and data frames</h3>
+<p><a href="hw5.html">matricesListsDataframes</a></p>
 </div>
 
 
