created hw6 and updated index

--- a/index.html
+++ b/index.html
@@ -389,6 +389,10 @@ summary {
 <h3>Homework 5: Matrices, lists, and data frames</h3>
 <p><a href="hw5.html">matricesListsDataframes</a></p>
 </div>
+<div id="homework-6-simulating-and-fitting-data-distributions" class="section level3">
+<h3>Homework 6: Simulating and fitting data distributions</h3>
+<p><a href="hw6.html">simulating and fitting distributions</a></p>
+</div>
 
 
 
