completed hw7 and updated index

--- a/index.html
+++ b/index.html
@@ -393,6 +393,10 @@ summary {
 <h3>Homework 6: Simulating and fitting data distributions</h3>
 <p><a href="hw6.html">simulating and fitting distributions</a></p>
 </div>
+<div id="homework-7-creating-fake-data-sets-to-explore-hypotheses" class="section level3">
+<h3>Homework 7: Creating fake data sets to explore hypotheses</h3>
+<p><a href="hw7.html">fake data exploration</a></p>
+</div>
 
 
 
