completed hw 8 and added it to index

--- a/index.html
+++ b/index.html
@@ -397,6 +397,10 @@ summary {
 <h3>Homework 7: Creating fake data sets to explore hypotheses</h3>
 <p><a href="hw7.html">fake data exploration</a></p>
 </div>
+<div id="homework-8-data-manipulation-using-the-dplyr-package" class="section level3">
+<h3>Homework 8: Data manipulation using the dplyr package</h3>
+<p><a href="hw8.html">dplyr</a></p>
+</div>
 
 
 
