--- a/index.html
+++ b/index.html
@@ -401,6 +401,10 @@ summary {
 <h3>Homework 8: Data manipulation using the dplyr package</h3>
 <p><a href="hw8.html">dplyr</a></p>
 </div>
+<div id="homework-9-organizing-code-with-structured-programming" class="section level3">
+<h3>Homework 9: Organizing code with structured programming</h3>
+<p><a href="hw9.html">structured programming</a></p>
+</div>
 
 
 
