--- a/index.html
+++ b/index.html
@@ -405,6 +405,10 @@ summary {
 <h3>Homework 9: Organizing code with structured programming</h3>
 <p><a href="hw9.html">structured programming</a></p>
 </div>
+<div id="homework-10-for-loops-and-randomization-tests" class="section level3">
+<h3>Homework 10: For loops and randomization tests</h3>
+<p><a href="hw10.html">for loops</a></p>
+</div>
 
 
 
