completed hw 12 and made some progress on hw11

--- a/index.html
+++ b/index.html
@@ -409,6 +409,14 @@ summary {
 <h3>Homework 10: For loops and randomization tests</h3>
 <p><a href="hw10.html">for loops</a></p>
 </div>
+<div id="homework-11-batch-processing" class="section level3">
+<h3>Homework 11: Batch processing</h3>
+<p><a href="hw11.html">batch processing</a></p>
+</div>
+<div id="homework-12-ggplot" class="section level3">
+<h3>Homework 12: ggplot</h3>
+<p><a href="hw12.html">ggplot</a></p>
+</div>
 
 
 
